2001-11-14  Mads Bondo Dydensborg  <madsdyd@mother>

	* Gameplay
	Added a THole, that can swallow a ball. 
	First steps towards rounds, score and such.

2001-11-13  Mads Bondo Dydensborg  <madsdyd@mother>

	* Version
	Tagging version 0.0.8
	Includes Jonas collision things.
	Includes various stuff, 

2001-11-11  Mads Bondo Dydensborg  <madsdyd@mother>

	* Version
	Stepped the version number to 0.0.8

2001-11-05  Mads Bondo Dydensborg  <madsdyd@mother>

	* Menu
	Fiddled a bit with the in game menu
	Made the minimum version check of python work
	Made the "end game" and Toggle Full Screen work

2001-11-04  Mads Bondo Dydensborg  <madsdyd@mother>

	* Menu
	Implemented the pre game menu
	Implemented the in game menu
	Still lacks game "turns" stuff

2001-11-03  Mads Bondo Dydensborg  <madsdyd@mother>

	* Menu
	Added a fontmanager, made the highscore use it
	Added menu class, no implementation yet

2001-11-02  Mads Bondo Dydensborg  <madsdyd@ripley>
        * Graphics
	Added graphics from Bjarke
	Changed size of screen to 800x600
	Changed maps (map1.py and map2.py)
	Added toggle between fullscreen and window 

2001-10-21  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Python
	Fixed the bugs that made it impossible to run maps.

2001-10-18  Mads Bondo Dydensborg  <madsdyd@ripley.localdomain>

	* Stuff
	Added a LogLineExt method to the log system.

2001-10-15  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Structure
	Moved some stuff around in preparation for having the
	client control the "session" more. 
	Loads a default map.
	Beginning to add support for scripted events on collisions.
	
2001-10-13  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* GameTime
	Changed the code in client, to include finer graded virtuel
	simulated time. (Fancy words, simple thing).

2001-10-11  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Collision
	Collision code is ok, but the actions carried out on a collosion
	is not.
	Added a ball which gets loaded when map1.py is loaded.
